# med-asr-finetune-vertexai

./: .env.example  .gitignore  Dockerfile  README.md  med-asr-finetune-pipeline.json  pyproject.toml  submit.py
src/trainer/: pipeline.py  task.py
